<resources>
    <string name="app_name">Gym</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gym App</string> <!-- Changed title for header -->
    <string name="nav_header_subtitle">info@gymapp.com</string> <!-- Updated placeholder email -->
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu Items -->
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_coaches">Coaches</string>
    <string name="menu_events">Events</string>
    <string name="menu_logout">Logout</string>

    <!-- Placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
